# amo-control-widget

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  full-prompt.txt  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/amo_control_widget.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/amo/: __init__.py  client.py  oauth.py  oauth_state.py  rate_limit.py  schemas.py  tenant_client.py  webhooks.py
backend/app/core/: config.py  crypto.py  errors.py  logging.py  security.py  time.py
backend/app/db/: alembic.ini  models.py  session.py
backend/app/reports/: __init__.py  builder.py  event_catalog.py  metrics.py  renderer.py  schemas.py  service.py
backend/app/telegram/: __init__.py  client.py  delivery.py  schemas.py
backend/app/tenants/: __init__.py  schemas.py  service.py
backend/app/widget_api/: auth.py  (+8 more)
backend/tests/: test_amo_client.py  test_crypto.py  test_metrics.py  test_oauth.py  test_report_builder.py  test_security_auth.py  test_settings_validation.py  test_telegram.py  test_webhooks_security.py
docs/: AMO_SETUP_PRIVATE.md  AMO_SETUP_PUBLIC.md  ARCHITECTURE.md  DEPLOYMENT.md  MARKETPLACE.md  MODERATION_CHECKLIST.md  OPERATIONS.md  SECURITY.md  TELEGRAM_SETUP.md
widget/: build-widget-zip.mjs  build.mjs  package-lock.json  package.json  tsconfig.json
widget/public/: manifest.private.json  manifest.public.json
widget/src/: amo.ts  api.ts  reports_page.ts  script.ts  settings_page.ts  status_page.ts  styles.css  telegram_page.ts
(+10 files in other folders)
